# tdlib-bot

./: CMakeLists.txt  CommonTdlib.h  Dockerfile  README.md  auth_flow.h  main.cpp  send_message.h
src/: bot.cpp  bot.h  main.cpp
